--- a/index.html
+++ b/index.html
@@ -4,8 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script src="libs/swiper/swiper-bundle.min.js" defer></script>
+    <link rel="stylesheet" href="libs/swiper/swiper-bundle.min.css">
+
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
-    
+
+    <div class="swiper slider">
+
+        <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide">
+                <div class="slide__content">
+                    <h2>Abstract</h2>
+                    <p>Designing for the future</p>
+                    <button>Join Us</button>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide">
+                <div class="slide__content">
+                    <h2>Abstract</h2>
+                    <p>Designing for the future</p>
+                    <button>Join Us</button>
+                </div>
+            </div>
+            <div class="swiper-slide slide">
+                <div class="slide__content">
+                    <h2>Abstract</h2>
+                    <p>Designing for the future</p>
+                    <button>Join Us</button>
+                </div>
+            </div>
+
+        </div>
+        <div class="slider-bottom">
+            <div class="slider-pagination">
+                <div class="swiper-pagination">
+
+                </div>
+            </div>
+            <div class="slider-navigation">
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
